Google fonts, remove Typography

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,5 +1,5 @@
 html {
-  font-family: sans-serif;
+  font-family: 'Lato', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -202,7 +202,8 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  font-family: 'Lato', sans-serif;
+  font-weight:400;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -220,7 +221,7 @@ img {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  margin-bottom: 0.25rem;
 }
 h1 {
   margin-left: 0;
